--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.removeDefaultIcon::-webkit-inner-spin-button,
+.removeDefaultIcon::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+}
