--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,24 @@
 .removeDefaultIcon::-webkit-outer-spin-button {
   -webkit-appearance: none;
 }
+
+.sklLoading {
+  background-color: #726d6d;
+  background: linear-gradient(
+      100deg,
+      rgba(255, 255, 255, 0) 40%,
+      rgba(255, 255, 255, 0.5) 50%,
+      rgba(255, 255, 255, 0) 60%
+    )
+    #615b5b;
+
+  background-size: 200% 100%;
+  background-position-x: 180%;
+  animation: 1s loading ease-in-out infinite;
+}
+
+@keyframes loading {
+  to {
+    background-position-x: -20%;
+  }
+}
