--- a/src/Pages/ImageCard/ImageCard/ImageCard.css
+++ b/src/Pages/ImageCard/ImageCard/ImageCard.css
@@ -35,3 +35,33 @@
   width: 250px;
   /* scale: 1.1; */
 }
+
+/* 3 bar start */
+.menu-icon {
+  width: 30px;
+  height: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  cursor: pointer;
+}
+
+.menu-icon span {
+  display: block;
+  width: 100%;
+  height: 2px;
+  background: white;
+  transition: all 0.3s ease-in-out;
+}
+
+.menu-icon:hover span:nth-child(1) {
+  transform: rotate(45deg) translate(5px, 5px);
+}
+
+.menu-icon:hover span:nth-child(2) {
+  opacity: 0;
+}
+
+.menu-icon:hover span:nth-child(3) {
+  transform: rotate(-45deg) translate(5px, -5px);
+}
