--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,30 @@
 .lightMode {
   background-color: white;
 }
+
+#sticky-card-1 {
+  --index: 1;
+}
+
+#sticky-card-2 {
+  --index: 2;
+}
+
+#sticky-card-3 {
+  --index: 3;
+}
+
+#sticky-card-4 {
+  --index: 4;
+}
+#sticky-card-5 {
+  --index: 5;
+}
+
+#sticky-card-6 {
+  --index: 6;
+}
+
+.sticky-card {
+  top: calc(var(--index) * 4rem);
+}
